--- a/animalshelters/Shelters.css
+++ b/animalshelters/Shelters.css
@@ -1,3 +1,15 @@
 * {
     font-family: "Arial Black", Gadget, sans-serif;
 }
+}
+h1 {
+    background-color: green;
+}
+
+div {
+    background-color: lightblue;
+}
+
+p {
+    background-color: yellow;
+}
